media/houndarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: houndarr
  annotations:
    gethomepage.dev/enabled: 'false'
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - houndarr.jef.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: houndarr
          port: 8877
          group: ''
          kind: Service
          weight: 1
